Github Action integrated with Cursor Bugbot to control quality gate, VA issues etc. Fix some UT issue to ensure maven test and package commands can pass successfully. checkstyle, PMD-Programming Mistake Detector are integrated.